# vehicle-ros2

./: .gitignore  README.md  path_planning.py  root-main.py  test.py  uart_sender.py
aruco-analysis/: main-rpicam.cpp  main.cpp
project/: CMakeLists.txt
project/src/: communicator.cpp  communicator.h  main.cpp  path_planner.cpp  path_planner.h
rpicam-capture/: aruco-capture.py
